--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,16 @@
 <resources>
     <string name="app_name">Lecture Recorder</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_lectures">Lectures</string>
+    <string name="title_folders">Folders</string>
+    <string name="title_settings">Settings</string>
+    <string name="extended_button">Record lecture</string>
+    <string name="recent_lectures">RECENT \nLECTURES</string>
+    <string name="your_folders">YOUR\nFOLDERS</string>
+    <string name="settings">SETTINGS</string>
+
+    <string name="lecture_topic"><![CDATA[<b>Lecture topic:</b> %1$s]]></string>
+    <string name="subject"><![CDATA[<b>Subject:</b> %1$s]]></string>
+    <string name="date"><![CDATA[<b>Date:</b> %1$s]]></string>
+    <string name="duration"><![CDATA[<b>Duration:</b> %1$s]]></string>
+
 </resources>
