--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,21 @@
     <string name="title_folders">Folders</string>
     <string name="title_settings">Settings</string>
     <string name="extended_button">Record lecture</string>
+    <string name="confirm_button">Confirm</string>
+    <string name="cancel_button">Don\'t save</string>
     <string name="recent_lectures">RECENT \nLECTURES</string>
     <string name="your_folders">YOUR\nFOLDERS</string>
     <string name="settings">SETTINGS</string>
     <string name="marks">Marks</string>
-    <string name="countdown">00:00:00</string>
+    <string name="chronometer">00:00:00</string>
+    <string name="hint_lecture">Lecture topic name</string>
+    <string name="hint_folder">Create a folder or choose existing</string>
+    <string name="hint_download">Download lecture to server</string>
+    <string name="title_permission">Permissions denied</string>
+    <string name="permissions_required">App requires RECORD_AUDIO permission to access mic and WRITE_EXTERNAL_STORAGE to
+        save recorded audio
+    </string>
+    <string name="info_lecture_configuration">Your lecture is recorded, you can configure lecture settings. If you don\'t choose any folder, default folder will be selected</string>
 
     <string name="ok">@android:string/ok</string>
     <string name="cancel">@android:string/cancel</string>
